修复 Class.newInstance 方法在 JDK 9+ 中被弃用的问题。